feat: add event endpoint
