# backend-ts/src/middleware/validation/event.validation.ts
@@ -1,33 +1,33 @@
 import Validator from 'validatorjs';
 import { Request, Response, NextFunction } from 'express';
 
-const RegisterValidation = async (
+const CreateValidation = async (
   req: Request,
   res: Response,
   next: NextFunction
 ) => {
   try {
-    const { username, email, password, fullname, role } = req.body;
+    const { name, description, date, location } = req.body;
 
     const data = {
-      username,
-      email,
-      password,
-      fullname,
-      role,
+      name,
+      description,
+      date,
+      location,
     };
 
     const rules: Validator.Rules = {
-      username: 'required|string|max:20',
-      email: 'required|email',
-      password: 'required|min:7',
-      fullname: 'required|string|max:50',
-      role: 'required|string|in:admin,user',
+      name: 'required|string|max:50',
+      description: 'required|string|max:200',
+      date: 'required|string',
+      location: 'required|string|max:50',
     };
 
     const validate = new Validator(data, rules);
 
     if (validate.fails()) {
+      console.log('masok sini ajg');
+
       return res.status(400).send({ status: 400, message: validate.errors });
     }
     next();
@@ -38,6 +38,6 @@ const RegisterValidation = async (
   }
 };
 
-// TODO: Add more validation for update and delete user
+// TODO: Add more validation for update and delete
 
-export default { RegisterValidation };
+export default { CreateValidation };
